--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
-  "version": "1.0.5",
+  "version": "1.0.6",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,7 +12,7 @@
     "cap:sync": "cap sync",
     "cap:sync:android": "cap sync android",
     "prepare:android": "npm run build && npx cap sync android && npx cap update android",
-    "build:android": "npm run prepare:android && cd android && ./gradlew assembleDebug",
+    "build:android": "npm run prepare:android && cd android && ./gradlew assembleRelease",
     "distribute:android": "./scripts/distribute-android.sh",
     "distribute:android:win": "scripts\\distribute-android.bat",
     "distribute:fastlane": "fastlane android distribute",
